tests/lang/compile_fail/ownership_branch_error.expo
struct Point
  x: Int
  y: Int
end

fn consume(move p: Point) -> Int
  p.x
end

fn main
  p = Point{x: 1, y: 2}
  flag = true
  if flag
    q = p
  else
    42.print()
  end
  p.x.print()
end
